Fixed background cutting off when zooming out

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,36 +1,29 @@
 .exodia-container {
     display: flex;
     width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
 }
 
 .container-1 {
     background-color: thistle;
     width: 30vw;
-    min-height: 100%;
 }
 
 .container-2 {
     display: inline-flex;
     background-color: tomato;
     width: 70vw;
-    min-height: 100%;
     padding: 20px;
     flex-wrap: wrap;
-
 }
 
 .box {
-    flex: 1 1 40%;
+    flex: 1 1 49%;
     padding: 10px;
     margin: 5px;
     background-color: #202020;
-    border-radius: 5px;
-    /*
-    *align-content: flex-start;
-    *align-self: stuff;
-    *align-items: stuff;
-    */
+    border-radius: 7.5px;
+    align-self: center;
 }
 
 .box:hover {
